<resources>
    <string name="app_name">Shoe Store</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signUp">Signup</string>
    <string name="welcomeTo">"Welcome to "</string>
    <string name="skip">skip</string>
    <string name="startJourneyWith">Start Journey With</string>
    <string name="instructions">Instructions :</string>
    <string name="instructionsTxt">- You can find list of shoes in the app \n\n- Add new shoe</string>
    <string name="shoeName">shoe name</string>
    <string name="shoeCompany">shoe company</string>
    <string name="shoeSize">shoe size</string>
    <string name="description">description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error data</string>
    <string name="next">next</string>
</resources>