<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Fragments.InstructionFragment">
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/shoe4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="25dp"
            android:layout_marginHorizontal="20dp"
            />

        <TextView
            android:id="@+id/instructionsTv"
            style="@style/txtBoldBlack20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instructions"
            app:layout_constraintBottom_toTopOf="@+id/appNameTv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="20dp"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/appNameTv"
            style="@style/txtMediumBlack16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/instructionsTxt"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instructionsTv" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/skipBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            app:backgroundTint="@color/teal_200"
            android:text="@string/skip"
            style="@style/txtMediumBlack16"
            android:gravity="center"
            app:cornerRadius="10dp"
            android:paddingVertical="5dp"
            android:layout_margin="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>