<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".Fragments.LoginFragment">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginVertical="20dp"
            android:src="@drawable/shoe1"
            />

        <TextView
            style="@style/txtMediumBlack16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/email" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            app:strokeColor="@color/gray"
            app:strokeWidth="1dp">

            <EditText
                android:id="@+id/emailEt"
                style="@style/txtRegularBlack14"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="8dp" />
        </com.google.android.material.card.MaterialCardView>

        <TextView
            style="@style/txtMediumBlack16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/password" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            app:strokeColor="@color/gray"
            app:strokeWidth="1dp">

            <EditText
                android:id="@+id/passwordEt"
                style="@style/txtRegularBlack14"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="8dp" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            app:backgroundTint="@color/white"
            android:text="@string/login"
            style="@style/txtBoldBlack17"
            android:gravity="center"
            app:strokeColor="@color/teal_200"
            app:strokeWidth="1dp"
            app:cornerRadius="10dp"
            android:paddingVertical="5dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/signUpBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            app:backgroundTint="@color/teal_200"
            android:text="@string/signUp"
            style="@style/txtBoldBlack17"
            android:gravity="center"
            app:cornerRadius="10dp"
            android:paddingVertical="5dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="5dp"/>

    </LinearLayout>
</layout>