<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Fragments.ShoeDetailFragment"
        android:orientation="vertical"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginVertical="10dp"
                android:src="@drawable/shoe1"
                tools:ignore="ContentDescription" />
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                android:layout_margin="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/txtMediumBlack16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/shoeName" />

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginVertical="10dp"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="5dp"
                        app:strokeColor="@color/gray"
                        app:strokeWidth="1dp">

                        <EditText
                            android:id="@+id/shoeNameEt"
                            style="@style/txtRegularBlack14"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@null"
                            android:hint="@string/shoeName"
                            android:padding="8dp" />
                    </com.google.android.material.card.MaterialCardView>

                    <TextView
                        style="@style/txtMediumBlack16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/shoeCompany" />

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginVertical="10dp"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="5dp"
                        app:strokeColor="@color/gray"
                        app:strokeWidth="1dp">

                        <EditText
                            android:id="@+id/shoeCompanyEt"
                            style="@style/txtRegularBlack14"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@null"
                            android:hint="@string/shoeCompany"
                            android:padding="8dp" />
                    </com.google.android.material.card.MaterialCardView>

                    <TextView
                        style="@style/txtMediumBlack16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/shoeSize" />

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginVertical="10dp"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="5dp"
                        app:strokeColor="@color/gray"
                        app:strokeWidth="1dp">

                        <EditText
                            android:id="@+id/shoeSizeEt"
                            style="@style/txtRegularBlack14"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@null"
                            android:hint="@string/shoeSize"
                            android:inputType="numberDecimal"
                            android:padding="8dp" />
                    </com.google.android.material.card.MaterialCardView>

                    <TextView
                        style="@style/txtMediumBlack16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/description" />

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginVertical="10dp"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="5dp"
                        app:strokeColor="@color/gray"
                        app:strokeWidth="1dp">

                        <EditText
                            android:id="@+id/descriptionEt"
                            style="@style/txtRegularBlack14"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@null"
                            android:hint="@string/description"
                            android:padding="8dp" />
                    </com.google.android.material.card.MaterialCardView>
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/saveBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAllCaps="false"
                        app:backgroundTint="@color/teal_200"
                        android:text="@string/save"
                        style="@style/txtBoldBlack17"
                        android:gravity="center"
                        app:cornerRadius="10dp"
                        android:paddingVertical="5dp"
                        android:layout_marginHorizontal="30dp"
                        android:layout_marginTop="10dp"/>
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/cancelBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAllCaps="false"
                        app:backgroundTint="@color/red"
                        android:text="@string/cancel"
                        style="@style/txtBoldBlack17"
                        android:gravity="center"
                        app:cornerRadius="10dp"
                        android:paddingVertical="5dp"
                        android:layout_marginHorizontal="30dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="20dp"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>



    </ScrollView>
</layout>